# This file documents the revision history for Perl extension Catalyst.

        - Use Class::MOP instead of Class::Inspector (Florian Ragwitz).
        - Change Catalyst::Test to use Sub::Exporter (Florian Ragwitz).
        - Fixed typo in Engine::HTTP::Restarter::Watcher causing -r to complain.

5.8000_02 2008-10-14 07:59:00
       - Fix manifest

5.8000_01 2008-10-13 22:52:00
        - Port to Moose
        - Added test for action stringify
        - Added test for component instances getting $self->{value} from config.
        - Add Catalyst::Response->print() method (ilmari)
        - Optionally aggregate tests using Test::Aggregate (Florian Ragwitz).
        - Additional docs for uri_for to mention how to use $c->action and 
          $c->req->captures (jhannah)
        - List unattached chained actions in Debug mode (Florian Ragwitz).
        - Pod formatting fix for Engine::FastCGI (Oleg Kostyuk).
        - Add visit, a returning ->go

5.7XXXXXX XXXX
        - Workaround change in LWP that broke a cookie test (RT #40037)
        - Back out go() since that feature's been pushed to 5.80
        - Fix some Win32 test failures
        - Add pt translation of error message (wreis)
        - Make :Chained('../action') work (Florian Ragwitz)
        - Add test actions
        - Chained doc improvements (rev 8326-8328)

5.7099_03 2008-07-20 10:10:00
        - Fix regressions for regexp fallback in model(), view() and controller()
        - Added the supplied argument to the regexp fallback warning for easier
          debugging
        - Ensure ACCEPT_CONTEXT is called for results from component()

5.7099_02 2008-07-16 19:10:00
        - Added PathPrefix attribute
        - Removed Catalyst::Build; we've long since moved to Module::Install
        - Updated Catalyst::Test docs to mention the use of HTTP::Request
          objects (Rafael Kitover)

5.7099_01 2008-06-25 22:36:00
        - Refactored component resolution (component(), models(), model(), et al). We now